UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Other_Operating_Cost__c/Pricing_Other_Operating_Cost__c.object-meta.xml
<CustomObject>
    <label>Pricing Other Operating Cost</label>
    <nameField>
        <displayFormat>POOC-{000000}</displayFormat>
        <label>Pricing Other Operating Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Other Operating Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>