UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Other_Operating_Cost__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <description>Monthly charge for other operating cost</description>
    <label>MRC</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>