UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Other_Operating_Cost__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product Code defined in the EPC</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>