UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_Other_Operating_Cost__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>Bandwidth/speed by megabytes for the Ethernet product</description>
    <label>Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>